--- a/2021/05-31.md
+++ b/2021/05-31.md
@@ -11,7 +11,15 @@ In near future, we will welcome a new intern from Congo. He has lived in Japan a
 
 ### 🧉 Drinking Mate
 
-I have started to drink Mate tea in the office nowadays. I've thought I would like to start new drinking habit adding to Coffee, and I found Mate. And when I visited Manzanita, a previous company I intershiped, I remembered the CEO, Chris also drinks Mate. I asked him how to start it, He gave me Mate pot made from coconut kindly, and I tasted it there. 
+I have started to drink Mate tea in the office nowadays. I've thought I would like to start new drinking habit adding to Coffee, and I found Mate. And when I visited Manzanita, a previous company I intershiped, I remembered the CEO, Chris also drinks Mate. I asked him how to start it, He gave me Mate pot made from coconut kindly, and I tasted it there.
+
+![cold mate](https://gyazo.com/636bbf3a23a71a2e23135e0df484aa29.jpg)
+
+
+
+### ♨️ Umeno-yu (梅の湯)
+
+[ Umeno-yu](https://twitter.com/1010_UMENOYU) Sento in Ogu, Tokyo was a great place. They are clean, having various kinds of tabs, and free sauna. This is the first time I've found free sauna in Sento in Tokyo. I enjoyed a lot.
 
 ## ✍ Study
 
