--- a/2021/05-31.md
+++ b/2021/05-31.md
@@ -13,7 +13,7 @@ In near future, we will welcome a new intern from Congo. He has lived in Japan a
 
 I have started to drink Mate tea in the office nowadays. I've thought I would like to start new drinking habit adding to Coffee, and I found Mate. And when I visited Manzanita, a previous company I intershiped, I remembered the CEO, Chris also drinks Mate. I asked him how to start it, He gave me Mate pot made from coconut kindly, and I tasted it there.
 
-![cold mate](https://gyazo.com/636bbf3a23a71a2e23135e0df484aa29.jpg)
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Cold mate tea <a href="https://t.co/Od1JfXMh57">pic.twitter.com/Od1JfXMh57</a></p>&mdash; Hasegawa Rintaro (@_h13o) <a href="https://twitter.com/_h13o/status/1401770929366048775?ref_src=twsrc%5Etfw">June 7, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
 
