--- a/2021/06-07.md
+++ b/2021/06-07.md
@@ -1,9 +1,14 @@
 ---
-title: 
+title: Umeshu(梅酒) 
 ---
 ## 🔥 Work
 ## 🌱 Life
+### Umeshu
+I made Umeshu("梅酒", Japanese apricot wine). After a year, I can drink, but I may taste it before. 😋
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">梅酒をつけました <a href="https://t.co/PJ843NFyoY">pic.twitter.com/PJ843NFyoY</a></p>&mdash; Hasegawa Rintaro (@_h13o) <a href="https://twitter.com/_h13o/status/1402232038300602368?ref_src=twsrc%5Etfw">June 8, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 ## ✍ Study
+In my company, started to subscribe O'reilly with ACM(Association for Computing Machinery) License! This is an amazing service and I'm excited to learn a lot from here.
 
 ### ✌️ Tdd with Golang!
 I found [learn-go-with-tests](https://github.com/quii/learn-go-with-tests) for my study.
