--- a/2021/05-31.md
+++ b/2021/05-31.md
@@ -24,6 +24,6 @@ I have started to drink Mate tea in the office nowadays. I've thought I would li
 
 ## ✍ Study
 
-### ⚙ Studying Rust language
+### ⚙️ Studying Rust language
 
 I learned C++ for competitive programming and Arduino part-time job, and I've thought I would like to continue this learning step. I found Rust when I thought about that, and it looks having cool memory management systems and many other features, so I decided to learn it. I'm learning from this online book, [RustCoder ―― AtCoder と Rust で始める競技プログラミング入門 (IN JAPANESE)](https://zenn.dev/toga/books/rust-atcoder) to how to solve competitive programming problems using Rust.
