--- a/2021/06-07.md
+++ b/2021/06-07.md
@@ -2,6 +2,10 @@
 title: Umeshu(梅酒) 
 ---
 ## 🔥 Work
+
+### 🤖 Three.js for Next Project! 
+We have decided to use Three.js for our next client work! We're excited to use this technology to give our client amazing experience!
+
 ## 🌱 Life
 ### 🍸 Umeshu
 I made Umeshu("梅酒", Japanese apricot wine). After a year, I can drink, but I may taste it before. 😋
@@ -9,9 +13,15 @@ I made Umeshu("梅酒", Japanese apricot wine). After a year, I can drink, but I
 
 ## ✍ Study
 
+### 🚀 Preparing for Isucon
+[Isucon](https://isucon.net/) is a contest which competes web tuning skills. I teamed up with [@yuasabe](https://github.com/yuasabe), a master student of UTokyo, previously CTO of Gracia! He has much more knowledge about CS and Web services, and I'm really happy to learn from him a lot.
+
 ### 📚 Subscribe O'reilly
-In my company, started to subscribe O'reilly with ACM(Association for Computing Machinery) License! This is an amazing service and I'm excited to learn a lot from here.
+In my company, started to subscribe O'reilly with ACM(Association for Computing Machinery) License! There are more than 50,000 contents around computer science, and I'm excited to learn a lot from here. Here are some books I'm now reading.
+
+* How Linux Works, 3rd Edition By Brian Ward
+* CEH Certified Ethical Hacker All-in-One Exam Guide, Fourth Edition, 4th Edition
+
 
 ### ✌️ Tdd with Golang!
-I found [learn-go-with-tests](https://github.com/quii/learn-go-with-tests) for my study.
-This is two of the most interested topics for me. TDD and Golang. 
+I found [learn-go-with-tests](https://github.com/quii/learn-go-with-tests) for my study. This is two of the most interested topics for me. TDD and Golang. I'll go through this soon.
