--- a/2021/06-07.md
+++ b/2021/06-07.md
@@ -3,6 +3,11 @@ title: Umeshu(梅酒)
 ---
 ## 🔥 Work
 
+# You should hide your keyboard!
+Just a year ago, I decided to hide keyboard characters, because I mistakenly bought a mac with JIS keyboard, and hate seeing Japanese Kana on the key anymore. Most Japanese and I type Japanese using Roma-ji input, not Kana Input, so it is totally useless information for me. And I bought [this sheet](https://www.amazon.co.jp/%E3%83%96%E3%83%A9%E3%83%83%E3%82%AF%E3%82%A2%E3%82%A6%E3%83%88%E3%82%B9%E3%83%86%E3%83%83%E3%82%AB%E3%83%BC-Mac-15mm-MBP-2015-JIS%E7%94%A8/dp/B016OVHROU). I was already happy, but I found another great side effects. My typing speed has improved. I thought I had already mastered touch typing at that time, but actually not. Just after hiding my keyboard, I noticed I look my keyboard every 5 sec. And after a week, thanks to this sheet, the habit disappeared! So, I'm now encouraging this sheet to my colleagues, at first, my co-founder. He also improved his typing score with technique! So we have decided to strongly recommend hiding keyboards for our team. That's the story!
+
+<blockquote class="twitter-tweet"><p lang="ja" dir="ltr">うちの会社に入ると黒シールで強制的にブラインドタッチを強いられます <a href="https://t.co/lMVwjUBglv">pic.twitter.com/lMVwjUBglv</a></p>&mdash; Hasegawa Rintaro (@_h13o) <a href="https://twitter.com/_h13o/status/1403180192932134912?ref_src=twsrc%5Etfw">June 11, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 ### 🤖 Three.js for Next Project! 
 We have decided to use Three.js for our next client work! We're excited to use this technology to give our client amazing experience!
 
