--- a/2021/05-31.md
+++ b/2021/05-31.md
@@ -5,13 +5,13 @@ title: Mate
 
 ### 🇨🇩 An intern from DR Congo!
 
-In near future, we will welcome a new intern from Congo. He has lived in Japan already for 3 years, and started to learn programming. It'll be great if he learn a lot in IZA. By the way, when he visited our office with his friend, he told me interesting stories of the black business in Congo. He told me Congo has many rare materials like Gold, Cobalt, and Diamond, and those business owners have their business territories and armies. Especially the are producing Gold and Cobalt are really dangerous so never should go closer.
+In near future, we will welcome a new intern from Congo. He has lived in Japan already for 3 years, and started to learn programming. It'll be great if he learns a lot in IZA. By the way, when he visited our office with his friend, he told me interesting stories of the black business in Congo. He told me Congo has many rare materials like Gold, Cobalt, and Diamond, and those business owners have their business territories and armies. Especially the are producing Gold and Cobalt are really dangerous so never should go closer.
 
 ## 🌱 Life
 
 ### 🧉 Drinking Mate
 
-I have started to drink Mate tea in the office nowadays. I've thought I would like to start new drinking habit adding to Coffee, and I found Mate. And when I visited Manzanita, a previous company I intershiped, I remembered the CEO, Chris also drinks Mate. I asked him how to start it, He gave me Mate pot made from coconut kindly, and I tasted it there.
+I have started to drink Mate tea in the office nowadays. I've thought I would like to start a new drinking habit in addition to Coffee, and I found Mate. And when I visited Manzanita, a previous company I intershiped, I remembered the CEO, Chris also drinks Mate. I asked him how to start it, He gave me a Mate pot made from coconut kindly, and I tasted it there.
 
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Cold mate tea <a href="https://t.co/Od1JfXMh57">pic.twitter.com/Od1JfXMh57</a></p>&mdash; Hasegawa Rintaro (@_h13o) <a href="https://twitter.com/_h13o/status/1401770929366048775?ref_src=twsrc%5Etfw">June 7, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
@@ -19,7 +19,7 @@ I have started to drink Mate tea in the office nowadays. I've thought I would li
 
 ### ♨️ Umeno-yu (梅の湯)
 
-[ Umeno-yu](https://twitter.com/1010_UMENOYU) Sento in Ogu, Tokyo was a great place. They are clean, having various kinds of tabs, and free sauna. This is the first time I've found free sauna in Sento in Tokyo. I enjoyed a lot.
+[ Umeno-yu](https://twitter.com/1010_UMENOYU) Sento in Ogu, Tokyo was a great place. They are clean, having various kinds of tabs, and a free sauna. This is the first time I've found the free one in Sento in Tokyo. I enjoyed it a lot.
 
 ## ✍ Study
 
