--- a/2021/06-14.md
+++ b/2021/06-14.md
@@ -6,7 +6,7 @@ title: Yubari Meron
 
 ### 🧹 Tidy up programs like a shared room, not like a private room.
 
-When I edit our companies' programs, sometimes I find some functions are not in use, and folder name is still using old, unrelevant name for current workflows. This is the time to do refactoring, and I think abotut the Boy Scout Rule of Uncle Bob, “Leave Things BETTER than you found them.” I sometimes talk about this to my Japanese coworkers, but it is not easy for Japanese to imagine the situation of Boy Scout, or camping. So, I come up another metaphor, which is Shared Room Rule. If the program is your own personal project, you don't have to keep things tidy everyday, you can put some garbage in the corner, and you can leave your clothes on the floor. BUT, if it is a shared room, you need to make rules to put what to where, and keep it tidy for next person. I hope this metaphor is a litte more making sense!
+When I edit our companies' programs, sometimes I find some functions are not in use, and folder name is still using old, irrelevant name for current workflows. This is the time to do refactoring, and I think about the Boy Scout Rule of Uncle Bob, “Leave Things BETTER than you found them.” I sometimes talk about this to my Japanese coworkers, but it is not easy for Japanese to imagine the situation of Boy Scout, or camping. So, I come up another metaphor, which is Shared Room Rule. If the program is your own personal project, you don't have to keep things tidy everyday, you can put some garbage in the corner, and you can leave your clothes on the floor. BUT, if it is a shared room, you need to make rules to put what to where, and keep it tidy for next person. I hope this metaphor is a little more making sense!
 
 ## 🌱 Life
 
