--- a/2021/06-20.md
+++ b/2021/06-20.md
@@ -10,7 +10,7 @@ For my client, we have a small web server on docker with nginx. Once, I've set t
 ### 心技体(Spirit, Skill, Body)
 When I watch the action film "The Equalizer" on the Netflix, I heard the protagonist mentioned, "Body, Mind, and Spirit." several times. I don't know where the saying comes from, but noticed it is so similar to "心技体"(Shin-Gi-Tai, Spirit, Skill, and Body) in Japanese. It means those balances are principal to be successful. When I look back my daily life, I invest time in 技(skill) and 体(body), but not in 心(Spirit). So, nowadays I'm looking for how to train my spirit for a better life. 
 
-### ☂ Tsuyu(梅雨)
+### 🌂 Tsuyu(梅雨)
 Tsuyu(梅雨) is a rainy season in Tokyo. I was born in Sapporo, northern area of Japan, that doesn't Tsuyu, so I'm still not used to it. Also, my schedule of running 100km every month is messed up😩.
 
 ## ✍ Study
