--- a/2021/06-20.md
+++ b/2021/06-20.md
@@ -7,7 +7,7 @@ title: Tsuyu
 For my client, we have a small web server on docker with nginx. Once, I've set the https configs following [DigitalOcean's article](https://www.digitalocean.com/community/tutorials/how-to-secure-a-containerized-node-js-application-with-nginx-let-s-encrypt-and-docker-compose) but the update of the certification on cronjobs does not work well. So, I've researched some and find this nice OSS, [docker-nginx-certbot](https://github.com/JonasAlfredsson/docker-nginx-certbot). It has shell scripts to do periodic updates, generation of dhparam keys, and staging mode, so it is so easy to switch from the DO example to this one.
 
 ## 🌱 Life
-### 心技体(Spirit, Skill, Body)
+### ⚖️  心技体(Spirit, Skill, Body)
 When I watch the action film "The Equalizer" on the Netflix, I heard the protagonist mentioned, "Body, Mind, and Spirit." several times. I don't know where the saying comes from, but noticed it is so similar to "心技体"(Shin-Gi-Tai, Spirit, Skill, and Body) in Japanese. It means those balances are principal to be successful. When I look back my daily life, I invest time in 技(skill) and 体(body), but not in 心(Spirit). So, nowadays I'm looking for how to train my spirit for a better life. 
 
 ### 🌂 Tsuyu(梅雨)
